--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,1 @@
-<div class="hero" style="background-image: url(https://images.unsplash.com/photo-1546146830-2cca9512c68e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1100&q=80)">
-  <div class="hero__content">
-    <h1>Hello,</h1>
-    <h1>We are elfTech.</h1>
-    <a class="btn" href="#">Sign up</a>
-  </div>
-</div>
+<router-outlet></router-outlet>
