[Homepage] Update UI homepage

--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,7 +1,7 @@
 <ngx-spinner  type="ball-beat"></ngx-spinner>
 <div class="page-wrapper">
     <main class="page-content">
-        <div class="container-fluid">
+        <div class="">
             <router-outlet></router-outlet>
         </div>
     </main>
