--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,3 +11,17 @@ body {
 .input-group-text {
     font-size: 14px;
 }
+html, body{
+    margin: 0;
+    padding: 0;
+    font-family: 'Lato', sans-serif;
+    color: #1f4568;
+  }
+  
+  body{
+  background-image: url("https://image.ibb.co/de6JzG/bitmap_1_1.png");
+    background-size:cover;
+    background-repeat:no-repeat;
+    background-position: center;
+  }
+  
